--- a/erpPlanner/spa/src/component/project-summary/project-summary.component.html
+++ b/erpPlanner/spa/src/component/project-summary/project-summary.component.html
@@ -1,19 +1,21 @@
 <section>
   <div class="grid grid-rows-4 grid-flow-col gap-4 ">
     <div class="row-span-4   ">
-      <h1 class="text-base-content my-3 text-4xl">IO Expander Based On MCP23017 </h1>
-      <textarea cols="40" rows="5" type="text" placeholder="Type here"
-        class="custom-text-view bg-transparent text-4xl"></textarea>
+      <ng-icon name="heroBeakerSolid" class="text-3xl mx-3"></ng-icon>
+      <input type="text" placeholder="Title" class="custom-text-view outline-none bg-transparent text-4xl" />
+
       <h2 class="text-2xl">Summary</h2>
       <p class="my-3 text-sm">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore
         magna
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <textarea type="text" placeholder="Type here" class="custom-text-view bg-transparent text-sm"></textarea>
+
     </div>
 
     <div class="grid col-span-2 row-span-2 grid-flow-col gap-2  ">
@@ -28,15 +30,17 @@
     </div>
 
     <div class="col-span-2  ">
-      <h1 class="text-base-content text-2xl">Price Each $32 </h1>
+      <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mx-3"></ng-icon>
+      <span class="text-base-content text-2xl py-3">Price Each 32 </span>
     </div>
 
     <div class="col-span-2  ">
-      <h1 class="text-base-content text-2xl">Capital For Total Item</h1>
+      <ng-icon name="heroChartPieSolid" class="text-2xl mx-3"></ng-icon>
+      <span class="text-base-content text-2xl">Capital For Total Item</span>
     </div>
   </div>
 
-  <div class="collapse bg-base-200 border">
+  <div class="collapse collapse-arrow  bg-base-200 shadow-md shadow-regal-blue">
     <input type="checkbox" />
     <div class="collapse-title text-xl font-medium">
       List Used component
