[planerp-3-11-2307] add prosemirror and milkdown

--- a/erpPlanner/spa/src/component/project-summary/project-summary.component.html
+++ b/erpPlanner/spa/src/component/project-summary/project-summary.component.html
@@ -5,16 +5,7 @@
       <input type="text" placeholder="Title" class="custom-text-view outline-none bg-transparent text-4xl" />
 
       <h2 class="text-2xl">Summary</h2>
-      <p class="my-3 text-sm">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore
-        magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur
-        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <app-milkdown-editor></app-milkdown-editor>
 
     </div>
 
@@ -55,4 +46,11 @@
 
   <button class="btn my-5 btn-accent">Show Step Produce</button>
 
+  <app-prosemirror-basic-editor></app-prosemirror-basic-editor>
+  <app-dialog dialogTitle="Jangkrik">
+    <h1>Dialog Content </h1>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+    </p>
+  </app-dialog>
 </section>
