--- a/erpPlanner/spa/src/styles.scss
+++ b/erpPlanner/spa/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @tailwind base;
+
 /* Firefox */
 * {
   scrollbar-width: thin;
@@ -22,5 +23,30 @@
   border-radius: 14px;
   border: 3px solid var(--primary);
 }
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.2em;
+}
+
+h4 {
+  font-size: 1em;
+}
+
+h5 {
+  font-size: 0.8em;
+}
+
+h6 {
+  font-size: 0.7
+}
+
 @tailwind components;
 @tailwind utilities;
