[planerp-3-16-2340] add math plugin to milkdown and make new currency controller on backend

--- a/erpPlanner/spa/src/component/project-summary/project-summary.component.html
+++ b/erpPlanner/spa/src/component/project-summary/project-summary.component.html
@@ -2,7 +2,7 @@
   <div class="grid grid-rows-4 grid-flow-col gap-4 ">
     <div class="row-span-4   ">
       <ng-icon name="heroBeakerSolid" class="text-3xl mx-3"></ng-icon>
-      <input type="text" placeholder="Title" class="custom-text-view outline-none bg-transparent text-4xl" />
+      <input inputNoBorder placeholder="Title" class="text-4xl" />
 
       <h2 class="text-2xl">Summary</h2>
       <app-milkdown-editor></app-milkdown-editor>
