--- a/erpPlanner/spa/src/component/project-summary/project-summary.component.html
+++ b/erpPlanner/spa/src/component/project-summary/project-summary.component.html
@@ -1,10 +1,11 @@
 <section>
   <div class="grid grid-rows-4 grid-flow-col gap-4 ">
+
     <div class="row-span-4   ">
       <ng-icon name="heroBeakerSolid" class="text-3xl mx-3"></ng-icon>
-      <input inputNoBorder placeholder="Title" class="text-4xl" />
+      <input inputNoBorder placeholder="Title" class="text-4xl border-l4 bg-transparent" />
 
-      <h2 class="text-2xl">Summary</h2>
+      <h2 class="text-2xl mt-5 -mb-4">Summary</h2>
       <app-milkdown-editor></app-milkdown-editor>
 
     </div>
@@ -12,45 +13,89 @@
     <div class="grid col-span-2 row-span-2 grid-flow-col gap-2  ">
 
       <div class="grid col-span-2 row-span-2 grid-flow-col  ">
-        <h1 class="text-base-content text-2xl">Total Piece Inside Inventory </h1>
+        <card-with-icon-on-side iconName="bootstrapBoxSeamFill" title="In Stock 30 Pcs"
+          description="worth 20000 IDR with sales profit 50000 IDR"></card-with-icon-on-side>
       </div>
 
       <div class="grid col-span-2 row-span-2 grid-flow-col  ">
-        <h1 class="text-base-content text-2xl">Can Made From Needed Material</h1>
+        <card-with-icon-on-side iconName="bootstrapBackpack2Fill" title="Can be made 3 from total materials"
+          description="Total Price of Material 50000 IDR"></card-with-icon-on-side>
       </div>
     </div>
 
-    <div class="col-span-2  ">
-      <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mx-3"></ng-icon>
-      <span class="text-base-content text-2xl py-3">Price Each 32 </span>
+    <div class="row-span-2 ">
+
+      <div class="flex sticky self-start flex-row">
+        <div class="dropdown">
+          <h3>From</h3>
+          <div tabindex="0" role="button" class="btn btn-sm m-1">
+            <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mb-1"></ng-icon>
+            IDR 20000
+            <ng-icon name="bootstrapChevronDown"></ng-icon>
+
+          </div>
+          <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a>IDR</a></li>
+            <li><a>USD</a></li>
+            <li><a>CYN</a></li>
+            <li><a>GBR</a></li>
+            <li><a>GRD</a></li>
+          </ul>
+        </div>
+
+        <div class="dropdown">
+          <h3>To</h3>
+          <div tabindex="0" role="button" class="btn btn-sm m-1">
+            <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mb-1"></ng-icon>
+            USD 1.3
+            <ng-icon name="bootstrapChevronDown"></ng-icon>
+
+          </div>
+          <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a>IDR</a></li>
+            <li><a>USD</a></li>
+            <li><a>CYN</a></li>
+            <li><a>GBR</a></li>
+            <li><a>GRD</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="divider"></div>
+
+      <div class="mb-6">
+        3.2 Less Than USD
+      </div>
+
+    </div>
+    <div class="row-span-2">
+
+      <div class="flex flex-col">
+        <button class="btn my-5 btn-accent">
+          <ng-icon name="bootstrapStack"> </ng-icon>
+          Show Step Produce
+        </button>
+
+        <button class="btn my-5 btn-primary">
+          <ng-icon name="bootstrapMemory"> </ng-icon>
+          Save Changes
+        </button>
+      </div>
     </div>
 
-    <div class="col-span-2  ">
-      <ng-icon name="heroChartPieSolid" class="text-2xl mx-3"></ng-icon>
-      <span class="text-base-content text-2xl">Capital For Total Item</span>
-    </div>
   </div>
 
   <div class="collapse collapse-arrow  bg-base-200 shadow-md shadow-regal-blue">
     <input type="checkbox" />
     <div class="collapse-title text-xl font-medium">
+      <ng-icon name="bootstrapHddStackFill"></ng-icon>
       List Used component
     </div>
     <div class="collapse-content">
-      <div class="flex flex-row">
-        <p>Resistor</p>
-        <button class="btn btn-xs mx-2 btn-primary">edit</button>
-      </div>
+
+      <table-Custom></table-Custom>
+
     </div>
   </div>
 
-  <button class="btn my-5 btn-accent">Show Step Produce</button>
 
-  <app-prosemirror-basic-editor></app-prosemirror-basic-editor>
-  <app-dialog dialogTitle="Jangkrik">
-    <h1>Dialog Content </h1>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
-    </p>
-  </app-dialog>
 </section>
