--- a/erpPlanner/spa/src/styles.scss
+++ b/erpPlanner/spa/src/styles.scss
@@ -50,3 +50,6 @@ h6 {
 
 @tailwind components;
 @tailwind utilities;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
