--- a/erpPlanner/spa/src/app/component/project-summary/project-summary.component.html
+++ b/erpPlanner/spa/src/app/component/project-summary/project-summary.component.html
@@ -2,8 +2,11 @@
   <div class="grid grid-rows-4 grid-flow-col gap-4 ">
 
     <div class="row-span-4   ">
-      <ng-icon name="heroBeakerSolid" class="text-3xl mx-3"></ng-icon>
-      <input inputNoBorder placeholder="Title" class="text-4xl border-l4 bg-transparent" />
+      <ng-icon name="heroBeakerSolid"
+               class="text-3xl mx-3"></ng-icon>
+      <input inputNoBorder
+             placeholder="Title"
+             class="text-4xl border-l4 bg-transparent" />
 
       <h2 class="text-2xl mt-5 -mb-4">Summary</h2>
       <app-milkdown-editor></app-milkdown-editor>
@@ -13,13 +16,15 @@
     <div class="grid col-span-2 row-span-2 grid-flow-col gap-2  ">
 
       <div class="grid col-span-2 row-span-2 grid-flow-col  ">
-        <card-with-icon-on-side iconName="bootstrapBoxSeamFill" title="In Stock 30 Pcs"
-          description="worth 20000 IDR with sales profit 50000 IDR"></card-with-icon-on-side>
+        <card-with-icon-on-side iconName="bootstrapBoxSeamFill"
+                                title="In Stock 30 Pcs"
+                                description="worth 20000 IDR with sales profit 50000 IDR"></card-with-icon-on-side>
       </div>
 
       <div class="grid col-span-2 row-span-2 grid-flow-col  ">
-        <card-with-icon-on-side iconName="bootstrapBackpack2Fill" title="Can be made 3 from total materials"
-          description="Total Price of Material 50000 IDR"></card-with-icon-on-side>
+        <card-with-icon-on-side iconName="bootstrapBackpack2Fill"
+                                title="Can be made 3 from total materials"
+                                description="Total Price of Material 50000 IDR"></card-with-icon-on-side>
       </div>
     </div>
 
@@ -28,13 +33,17 @@
       <div class="flex sticky self-start flex-row">
         <div class="dropdown">
           <h3>From</h3>
-          <div tabindex="0" role="button" class="btn btn-sm m-1">
-            <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mb-1"></ng-icon>
+          <div tabindex="0"
+               role="button"
+               class="btn btn-sm m-1">
+            <ng-icon name="heroCurrencyDollarSolid"
+                     class="text-2xl mb-1"></ng-icon>
             IDR 20000
             <ng-icon name="bootstrapChevronDown"></ng-icon>
 
           </div>
-          <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+          <ul tabindex="0"
+              class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
             <li><a>IDR</a></li>
             <li><a>USD</a></li>
             <li><a>CYN</a></li>
@@ -45,13 +54,17 @@
 
         <div class="dropdown">
           <h3>To</h3>
-          <div tabindex="0" role="button" class="btn btn-sm m-1">
-            <ng-icon name="heroCurrencyDollarSolid" class="text-2xl mb-1"></ng-icon>
+          <div tabindex="0"
+               role="button"
+               class="btn btn-sm m-1">
+            <ng-icon name="heroCurrencyDollarSolid"
+                     class="text-2xl mb-1"></ng-icon>
             USD 1.3
             <ng-icon name="bootstrapChevronDown"></ng-icon>
 
           </div>
-          <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+          <ul tabindex="0"
+              class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
             <li><a>IDR</a></li>
             <li><a>USD</a></li>
             <li><a>CYN</a></li>
