--- a/erpPlanner/spa/src/app/page/dasboard/dasboard.component.html
+++ b/erpPlanner/spa/src/app/page/dasboard/dasboard.component.html
@@ -4,7 +4,9 @@
   <div class="navbar bg-base-100 px-5 shadow-2xl">
     <div class="flex-1">
 
-      <img src="../../assets/icon.png" width="35px" class="mx-2" />
+      <img src="../../assets/icon.png"
+           width="35px"
+           class="mx-2" />
       <h3 class="text-xl">Planner P</h3>
     </div>
     <div class="flex-none">
@@ -259,7 +261,9 @@
   <!--Footer-->
   <footer class="footer footer-center p-10 bg-primary text-primary-content">
     <aside>
-      <img src="../../assets/icon.png" width="90px" height="90px " />
+      <img src="../../assets/icon.png"
+           width="90px"
+           height="90px " />
       <p class="font-bold">
         PlannerP. <br> Project Planner and Management.
       </p>
@@ -267,9 +271,12 @@
     </aside>
     <nav>
       <div class="grid grid-flow-col gap-4">
-        <a href="https://github.com/ahsanu123/learnRepo/tree/main/erpPlanner" target="_blank">
-          <div class="tooltip" data-tip="HOHOHO!">
-            <ng-icon name="bootstrapGithub" class="text-3xl"></ng-icon>
+        <a href="https://github.com/ahsanu123/learnRepo/tree/main/erpPlanner"
+           target="_blank">
+          <div class="tooltip"
+               data-tip="HOHOHO!">
+            <ng-icon name="bootstrapGithub"
+                     class="text-3xl"></ng-icon>
           </div>
 
         </a>
