--- a/erpPlanner/spa/src/component/dynamic-form/dynamic-form.component.html
+++ b/erpPlanner/spa/src/component/dynamic-form/dynamic-form.component.html
@@ -97,3 +97,11 @@
     </tbody>
   </table>
 </div>
+
+<div class="container">
+  <angular-slickgrid gridId="grid1"
+                     [columnDefinitions]="columnDefinitions"
+                     [gridOptions]="gridOptions"
+                     [dataset]="dataset">
+  </angular-slickgrid>
+</div>
