--- a/erpPlanner/spa/src/page/project-info/project-info.component.html
+++ b/erpPlanner/spa/src/page/project-info/project-info.component.html
@@ -1,1 +1,59 @@
-<p>project-info works!</p>
+<div class="mx-10 my-10 px-10 place-items-center">
+
+  <div class="flex w-full ">
+
+    <div id="statistic-info"
+         class="w-6/12">
+      <angular-slickgrid class="w-80"
+                         gridId="grid1"
+                         [columnDefinitions]="columnDefinitions"
+                         [gridOptions]="gridOptions"
+                         [dataset]="dataset">
+      </angular-slickgrid>
+    </div>
+
+    <div class="card mx-10 w-96 bg-base-100 shadow-xl border">
+      <figure>
+        <img src="https://cdn-shop.adafruit.com/970x728/5346-05.jpg"
+             alt="Shoes" />
+      </figure>
+      <div class="card-body">
+        <h2 class="card-title">
+          Shoes!
+          <div class="badge badge-secondary">NEW</div>
+        </h2>
+        <p>If a dog chews shoes whose shoes does he choose?</p>
+        <div class="card-actions justify-end">
+          <div class="badge badge-outline">Fashion</div>
+          <div class="badge badge-outline">Products</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <label class="mx-2 py-5 flex w-full">
+    <h3>{{showCode ? 'Hide Code': 'Show Code'}}</h3>
+    <input [(ngModel)]="showCode"
+           type="checkbox"
+           class="toggle ml-2" />
+  </label>
+
+  <div class="flex w-full mb-10">
+    <ng-container *ngIf="showCode">
+      <div class="grid w-96 min-h-96 flex-grow card w-80 bg-base-300 ">
+        <textarea class="textarea textarea-bordered w-full h-full"
+                  placeholder="Add Description Here"
+                  [(ngModel)]="descriptionContent">
+        </textarea>
+      </div>
+      <div class="divider divider-horizontal"></div>
+    </ng-container>
+    <div class="grid min-h-96 flex-grow card bg-base-300 place-items-left px-2 w-80">
+      <markdown emoji
+                [data]="descriptionContent"
+                class="markdown-project-info text-wrap overflow-y-auto py-5 px-5">
+      </markdown>
+    </div>
+  </div>
+</div>
