plannerp: add stupid update

--- a/erpPlanner/spa/src/page/project-info/project-info.component.html
+++ b/erpPlanner/spa/src/page/project-info/project-info.component.html
@@ -1,4 +1,4 @@
-<div class="mx-10 my-10 px-10 place-items-center">
+<div class="mx-10 my-10 mb-10 px-10 place-items-center">
 
   <div class="flex w-full ">
 
@@ -12,23 +12,7 @@
       </angular-slickgrid>
     </div>
 
-    <div class="card mx-10 w-96 bg-base-100 shadow-xl border">
-      <figure>
-        <img src="https://cdn-shop.adafruit.com/970x728/5346-05.jpg"
-             alt="Shoes" />
-      </figure>
-      <div class="card-body">
-        <h2 class="card-title">
-          Shoes!
-          <div class="badge badge-secondary">NEW</div>
-        </h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <div class="badge badge-outline">Fashion</div>
-          <div class="badge badge-outline">Products</div>
-        </div>
-      </div>
-    </div>
+    <app-product-card />
 
   </div>
 
