--- a/erpPlanner/spa/src/styles.scss
+++ b/erpPlanner/spa/src/styles.scss
@@ -90,6 +90,13 @@ h6 {
   font-size: 0.7
 }
 
+blockquote {
+
+  border-left: solid gray 5px;
+  padding-left: 10px;
+
+}
+
 @tailwind components;
 @tailwind utilities;
 
