--- a/erpPlanner/spa/src/app/page/page-not-found/page-not-found.component.html
+++ b/erpPlanner/spa/src/app/page/page-not-found/page-not-found.component.html
@@ -6,7 +6,7 @@
         <p class="py-6">
           sorry page not found
         </p>
-        <a href="#"
+        <a routerLink="/"
            class="btn btn-primary">Back to Home</a>
       </div>
     </div>
