--- a/erpPlanner/spa/src/app/component/form-generator/form-generator.component.html
+++ b/erpPlanner/spa/src/app/component/form-generator/form-generator.component.html
@@ -78,7 +78,7 @@
 
   <button pButton
           type="submit"
-          class="btn btn-primary w-full">
+          class="btn-primary ">
     {{this.submitLabel}}
   </button>
 
