--- a/erpPlanner/spa/src/app/page/project-page/project-page.component.html
+++ b/erpPlanner/spa/src/app/page/project-page/project-page.component.html
@@ -1,15 +1,20 @@
-<h1>Project</h1>
+<h1>
+  <span class="pi pi-lightbulb"
+        style="font-size: 2.5rem"></span>
+  Project
+</h1>
+<!-- <div *ngIf="projectById$ | async as project; else loading"> -->
+<!--   {{project.name}} -->
+<!--   {{project.description}} -->
+<!-- </div> -->
+<!-- <ng-template #loading> -->
+<!--   Loading user information... -->
+<!-- </ng-template> -->
 
-<div *ngIf="projectById$ | async as project; else loading">
-  {{project.name}}
-  {{project.description}}
-</div>
-<ng-template #loading>
-  Loading user information...
-</ng-template>
-
-<button class="btn btn-primary">Create New</button>
+<p *ngIf="projectData | async as data">{{data}}</p>
+<project-page-create-new-project />
 
 
-<form-generator [data]="formData"
-                (OnSubmit)="OnFormSubmit($event)" />
+<!-- <form-generator [data]="formData" -->
+<!--                 (OnSubmit)="OnFormSubmit($event)" /> -->
+<p-divider />
