--- a/erpPlanner/spa/src/app/page/project-page/project-page.component.html
+++ b/erpPlanner/spa/src/app/page/project-page/project-page.component.html
@@ -18,3 +18,14 @@
 <!-- <form-generator [data]="formData" -->
 <!--                 (OnSubmit)="OnFormSubmit($event)" /> -->
 <p-divider />
+
+<h2>Books</h2>
+<app-book-list class="book-list"
+               [books]="(books$ | async)!"
+               (add)="onAdd($event)"></app-book-list>
+
+<h2>My Collection</h2>
+<app-book-collection class="book-collection"
+                     [books]="(bookCollection$ | async)!"
+                     (remove)="onRemove($event)">
+</app-book-collection>
