--- a/erpPlanner/spa/src/app/page/project-page/component/create-new-project-page.component.html
+++ b/erpPlanner/spa/src/app/page/project-page/component/create-new-project-page.component.html
@@ -22,12 +22,13 @@
     </span>
 
 
-    <form-generator [data]="newProjectData" />
+    <form-generator [data]="newProjectData"
+                    (dataChange)="onDataChange($event)" />
 
     <div class="flex justify-content-end gap-2">
       <p-button label="Cancel"
                 severity="secondary"
-                (onClick)="visible = false" />
+                (onClick)="showDialog()" />
       <p-button label="Save"
                 (onClick)="onConfirm()" />
     </div>
