--- a/erpPlanner/spa/src/app/page/project-page/component/project-list.component.html
+++ b/erpPlanner/spa/src/app/page/project-page/component/project-list.component.html
@@ -8,29 +8,33 @@
                  let-lists>
       <div class="flex flex-column">
 
-        <div *ngFor="let item of lists; let first = first"
+        <div *ngFor="let item of lists; let first = first;"
              class="my-2">
           <p-card [header]="item.name"
                   [subheader]="getDate(item.createdDate)"
-                  [style]="{ width: '100%' }">
+                  [style]="{ width: '100%'}">
             <ng-template pTemplate="header">
-              <!-- <img alt="Card" -->
-              <!--      src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" /> -->
             </ng-template>
-            <p>
-
+            <p class="item-description">
+              {{item.description}}
             </p>
             <ng-template pTemplate="footer">
-              <div class="flex gap-3 mt-1">
-                <!-- <p-button label="Cancel" -->
-                <!--           severity="secondary" -->
-                <!--           class="w-full" -->
-                <!--           styleClass="w-full" /> -->
-                <!-- <p-button label="Save" -->
-                <!--           class="w-full" -->
-                <!--           styleClass="w-full" /> -->
+              <div class="tag-expander flex align-items-center">
+                <p-checkbox #chipExpanded
+                            [binary]="true"
+                            inputId="binary" />
+                <label [style]="{marginLeft: '20px'}"> Show Tags</label>
               </div>
+
+              <ng-container *ngIf="chipExpanded.checked()">
+                <p-floatLabel>
+                  <p-chips id="chips" />
+                  <label for="chips">Tags</label>
+                </p-floatLabel>
+              </ng-container>
+
             </ng-template>
+
           </p-card>
         </div>
 
@@ -39,23 +43,23 @@
   </p-dataView>
 </div>
 
-<p-table [value]="lists"
-         [tableStyle]="{ 'min-width': '50rem' }">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Name</th>
-      <th>Created Date</th>
-      <th>Dead Line Date</th>
-      <th>Sell Price</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body"
-               let-lists>
-    <tr>
-      <td>{{ lists.name}}</td>
-      <td>{{ lists.createdDate}}</td>
-      <td>{{ lists.deadLineDate}}</td>
-      <td>{{ lists.sellPrice}}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<!-- <p-table [value]="lists" -->
+<!--          [tableStyle]="{ 'min-width': '50rem' }"> -->
+<!--   <ng-template pTemplate="header"> -->
+<!--     <tr> -->
+<!--       <th>Name</th> -->
+<!--       <th>Created Date</th> -->
+<!--       <th>Dead Line Date</th> -->
+<!--       <th>Sell Price</th> -->
+<!--     </tr> -->
+<!--   </ng-template> -->
+<!--   <ng-template pTemplate="body" -->
+<!--                let-lists> -->
+<!--     <tr> -->
+<!--       <td>{{ lists.name}}</td> -->
+<!--       <td>{{ lists.createdDate}}</td> -->
+<!--       <td>{{ lists.deadLineDate}}</td> -->
+<!--       <td>{{ lists.sellPrice}}</td> -->
+<!--     </tr> -->
+<!--   </ng-template> -->
+<!-- </p-table> -->
